# wasi-data-rust

./: Cargo.toml  README.md  build.rs  iface.wai  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: action.yaml
.github/workflows/: main.yaml
component/: Cargo.toml  build.rs  output.rs
component/src/: lib.rs
crates/example-wasm/: Cargo.toml
crates/example-wasm/src/: lib.rs
crates/example-wasmer-host/: Cargo.toml
crates/example-wasmer-host/src/: main.rs
crates/example-wasmtime-host/: Cargo.toml
crates/example-wasmtime-host/src/: main.rs
crates/wasi-interface-gen/: Cargo.toml
crates/wasi-interface-gen/src/: lib.rs
crates/wasi-interface-gen/tests/: sanity.rs
docker/: Dockerfile  entrypoint.sh
host/: Cargo.toml  output.rs
host/src/: main.rs
spec/: calculator.witx  component.witx
src/: main.rs
wasi-iface-gen/: Cargo.toml  output.rs
wasi-iface-gen/src/: lib.rs
wasi-iface-gen/tests/: sanity.rs
witx/: component.witx  host.witx
