cargo-features = ["per-package-target"]

[package]
name = "component"
version = "0.1.0"
edition = "2018"
forced-target = "wasm32-wasi"

[dependencies]
witx-bindgen-rust = { git = "https://github.com/bytecodealliance/witx-bindgen.git" }
wasi-iface-gen = { path = "../wasi-iface-gen" }

[lib]
crate-type = ["cdylib"]
