[package]
name = "host"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "0.30.0"
wasmtime-wasi = "0.30.0"
anyhow = "1.0"
witx-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/witx-bindgen" }
