cargo-features = ["per-package-target"]

[package]
name = "example-wasm"
version = "0.1.0"
edition = "2018"
forced-target = "wasm32-wasi"

[dependencies]
wai-bindgen-rust = { git = "https://github.com/bytecodealliance/wai-bindgen.git" }
wasi-interface-gen = { path = "../wasi-interface-gen" , features = ["embed-wai"] }
hilbert = { git = "https://github.com/carlsverre/hilbert.git", branch = "wasm-support" }

vader_sentiment = { git = "https://github.com/ckw017/vader-sentiment-rust" }
lazy_static = "1.4.0"


[lib]
crate-type = ["cdylib"]
