[package]
name = "example-wasmer-host"
version = "0.1.0"
edition = "2018"

[dependencies]
wasmer = { git = "https://github.com/wasmerio/wasmer", branch = "get_namespace_exports" }
wasmer-wasi = { git = "https://github.com/wasmerio/wasmer", branch = "get_namespace_exports" }
anyhow = "1.0"
witx-bindgen-wasmer = { git = "https://github.com/wasmerio/witx-bindgen", branch = "wasmer-preview-20211001" }
