[package]
name = "wasi-interface-gen"
version = "0.1.0"
edition = "2018"

[dependencies]
syn = { version = "1.0", features = [
    "full",
    "printing",
    "visit",
    "extra-traits",
    "parsing",
] }
quote = "1.0"
wai-bindgen-rust = { git = "https://github.com/bytecodealliance/wai-bindgen.git" }
wai-bindgen-gen-rust-wasm = { git = "https://github.com/bytecodealliance/wai-bindgen.git" }
wai-parser = { git = "https://github.com/bytecodealliance/wai-bindgen.git"}
wai-bindgen-gen-core = { git = "https://github.com/bytecodealliance/wai-bindgen.git" }

[lib]
proc-macro = true
