[package]
name = "wasi-interface-gen"
version = "0.1.0"
edition = "2018"

[dependencies]
syn = { version = "1.0", features = [
    "full",
    "printing",
    "visit",
    "extra-traits",
    "parsing",
] }
quote = "1.0"
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git" }
wit-bindgen-gen-rust-wasm = { git = "https://github.com/bytecodealliance/wit-bindgen.git" }
wit-parser = { git = "https://github.com/bytecodealliance/wit-bindgen.git"}
wit-bindgen-gen-core = { git = "https://github.com/bytecodealliance/wit-bindgen.git" }

[lib]
proc-macro = true

[features]
embed-wit = []
